<resources>
    <string name="ok">OK</string>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activity_chooser_view_dialog_title_default">Select activity</string>
    <string name="abs__share_action_provider_share_with">Share with...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="abs__searchview_description_search">Search</string>
    <string name="abs__searchview_description_query">Search query</string>
    <string name="abs__searchview_description_clear">Clear query</string>
    <string name="abs__searchview_description_submit">Submit query</string>
    <string name="abs__searchview_description_voice">Voice search</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="com_facebook_tooltip_default">New! You\'re in control - choose what info you want to share with apps.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="store_picture_title">Save image</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">This app won\'t run without Google Play services, which are missing from your phone.</string>
    <string name="common_google_play_services_install_text_tablet">This app won\'t run without Google Play services, which are missing from your tablet.</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">This app won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_update_text">This app won\'t run unless you update Google Play services.</string>
    <string name="common_android_wear_update_text">This app won\'t run unless you update the Android Wear app.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="commono_google_play_services_api_unavailable_text">This app requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="sam_version">6.35.161102P1.120</string>
    <string name="sam">SAM</string>
    <string name="filter">Filter</string>
    <string name="activity_myaccount">My Account</string>
    <string name="menu_myapps">@string/my_apps</string>
    <string name="menu_search">@string/search</string>
    <string name="menu_settings">@string/preferences</string>
    <string name="menu_help">@string/help</string>
    <string name="menu_categories">@string/categories</string>
    <string name="menu_updates">@string/apps_with_updates</string>
    <string name="loading">Loading…</string>
    <string name="title_settings_general_clear_cache">Clear cache</string>
    <string name="summary_settings_general_clear_cache">Clear SAM internal cache</string>
    <string name="title_settings_general_clear_search_history">Clear history</string>
    <string name="summary_settings_general_clear_search_history">Clear SAM search history</string>
    <string name="summary_settings_general_clear_internal_data">Cached icons and screenshots will be deleted.</string>
    <string name="summary_settings_general_clear_search_history_message">SAM search history will be deleted.</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="compatibility_fail">Unfortunately, this application does not seem compatible with your device specifications or current system software. It is suggested not to download or contact publisher with your device specifications to update application compatibility accordingly.</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="price">Price</string>
    <string name="terms_checking_purchase">Checking for transaction status.</string>
    <string name="terms_condition">Proceed if you accept these terms and conditions.</string>
    <string name="search_tips">Search tips:</string>
    <string name="check_spelling">* Check spelling.</string>
    <string name="try_less_keywords">* Try less specific keywords.</string>
    <string name="try_different_keywords">* Try different keywords or use synonyms.</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="wallet_balance">Wallet balance</string>
    <string name="dev_wallet_balance">Developer balance</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="support">Support</string>
    <string name="about">About</string>
    <string name="sysinfo_title_device">Device</string>
    <string name="sam_version_title">SAM version</string>
    <string name="partner_title">SAM PID</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="model">Model</string>
    <string name="dpiclass">Dpi class</string>
    <string name="resolution">Screen resolution</string>
    <string name="API_level">API level</string>
    <string name="header_settings_cache">Cache and history</string>
    <string name="balance">Balance</string>
    <string name="purchased_items">Purchased items</string>
    <string name="topup">Add funds to your SlideME wallet</string>
    <string name="open_storagelocker">Open StorageLocker</string>
    <string name="fully_register">Add missing info</string>
    <string name="facebook_login">Login using Facebook</string>
    <string name="sort">Sort</string>
    <string name="limited_account_notice">Your account is still a limited account, since you have only registered with your email address. \nComplete your profile to enable full account access.</string>
    <string name="filter_prices_title">@string/price</string>
    <string name="filter_screens_title">Device type compatibility</string>
    <string name="filter_parental_title">Parental rating (block all above:)</string>
    <string name="filter_play_title">Google Play</string>
    <string name="filter_vibrate_title">Haptic feedback</string>
    <string name="incompatible">Incompatible</string>
    <string name="ram">RAM</string>
</resources>