<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_action_myapps" android:id="@id/menu_myapps" android:title="@string/menu_myapps" />
    <item android:icon="@drawable/ic_action_search" android:id="@id/menu_search_view" android:title="@string/menu_search" />
    <item android:icon="@drawable/ic_action_search" android:id="@id/menu_search" android:title="@string/menu_search" />
    <item android:icon="@drawable/ic_action_categories" android:id="@id/menu_categories" android:title="@string/menu_categories" />
    <item android:icon="@drawable/ic_action_account" android:id="@id/menu_myaccount" android:title="@string/activity_myaccount" />
    <item android:id="@id/menu_updates" android:title="@string/menu_updates" />
    <item android:icon="@drawable/ic_action_settings" android:id="@id/menu_settings" android:title="@string/menu_settings" />
    <item android:icon="@drawable/ic_action_help" android:id="@id/menu_help" android:title="@string/menu_help" />
    <item android:icon="@drawable/ic_action_about" android:id="@id/menu_about" android:title="@string/about" />
</menu>
