<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:paddingTop="8dp" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
    <LinearLayout android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:paddingLeft="16dp" android:paddingRight="16dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/sam" style="@style/Widget.TextView.Slideme.Form.Title.Accent" />
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/sam_version_title" style="@style/Widget.TextView.Slideme.Form.Title" />
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/sam_version" style="@style/Widget.TextView.Slideme.Form.Value" />
        <TextView android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/partner_title" style="@style/Widget.TextView.Slideme.Form.Title" />
        <TextView android:id="@id/partner" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/Widget.TextView.Slideme.Form.Value" />
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/sysinfo_title_device" style="@style/Widget.TextView.Slideme.Form.Title.Accent" />
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/manufacturer" style="@style/Widget.TextView.Slideme.Form.Title" />
        <TextView android:id="@id/manuValue" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/Widget.TextView.Slideme.Form.Value" />
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/model" style="@style/Widget.TextView.Slideme.Form.Title" />
        <TextView android:id="@id/modelValue" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/Widget.TextView.Slideme.Form.Value" />
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/API_level" style="@style/Widget.TextView.Slideme.Form.Title" />
        <TextView android:id="@id/apiValue" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/Widget.TextView.Slideme.Form.Value" />
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/dpiclass" style="@style/Widget.TextView.Slideme.Form.Title" />
        <TextView android:id="@id/dpiValue" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/Widget.TextView.Slideme.Form.Value" />
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/resolution" style="@style/Widget.TextView.Slideme.Form.Title" />
        <TextView android:id="@id/resValue" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/Widget.TextView.Slideme.Form.Value" />
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/ram" style="@style/Widget.TextView.Slideme.Form.Title" />
        <TextView android:id="@id/ramValue" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/Widget.TextView.Slideme.Form.Value" />
        <TextView android:id="@id/deviceIdTitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="ID" style="@style/Widget.TextView.Slideme.Form.Title" />
        <TextView android:id="@id/deviceIdValue" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/Widget.TextView.Slideme.Form.Value" />
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="AID" style="@style/Widget.TextView.Slideme.Form.Title" />
        <TextView android:id="@id/aidValue" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/Widget.TextView.Slideme.Form.Value" />
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="MAC" style="@style/Widget.TextView.Slideme.Form.Title" />
        <TextView android:id="@id/didValue" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/Widget.TextView.Slideme.Form.Value" />
        <Button android:id="@id/support" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/support" style="@style/Widget.Button.SlideMe" />
    </LinearLayout>
</ScrollView>
