<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="10dp">
    <TextView android:textAppearance="?unknown_attr_ref: 1010040" android:id="@id/results" android:padding="20dp" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <TextView android:textAppearance="?unknown_attr_ref: 1010040" android:textStyle="bold" android:paddingLeft="20dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/search_tips" />
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="30dp">
        <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/check_spelling" />
        <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/try_less_keywords" />
        <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/try_different_keywords" />
    </LinearLayout>
</LinearLayout>
