<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/com.slideme.sam.manager" slideme:layout_width="match_parent" slideme:layout_height="match_parent">
    <include slideme:id="@id/bar" slideme:layout_width="match_parent" slideme:layout_height="wrap_content" slideme:layout_alignParentBottom="true" layout="@layout/buttonbar" />
    <ScrollView slideme:scrollbars="vertical" slideme:layout_width="match_parent" slideme:layout_height="wrap_content" slideme:fillViewport="true" slideme:layout_above="@id/bar" slideme:layout_alignParentTop="true">
        <LinearLayout slideme:orientation="vertical" slideme:id="@id/content" slideme:layout_width="match_parent" slideme:layout_height="wrap_content">
            <TextView slideme:textAppearance="?unknown_attr_ref: 1010042" slideme:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" slideme:background="@drawable/bg_layer_dark" slideme:padding="8dp" slideme:layout_width="match_parent" slideme:layout_height="wrap_content" slideme:text="@string/terms_condition" style="@style/Widget.TextView.Slideme.Form.Value" />
            <TextView slideme:paddingTop="8dp" slideme:layout_width="match_parent" slideme:layout_height="wrap_content" slideme:text="@string/price" style="@style/Widget.TextView.Slideme.Form.Title.Accent" />
            <TextView slideme:id="@id/terms_price" slideme:paddingTop="4dp" slideme:paddingBottom="4dp" slideme:layout_width="wrap_content" slideme:layout_height="wrap_content" style="@style/Widget.TextView.Slideme.Form.Value" />
            <TextView slideme:textColor="0x106000c" slideme:id="@id/terms_billing" slideme:paddingTop="4dp" slideme:paddingBottom="4dp" slideme:visibility="gone" slideme:layout_width="wrap_content" slideme:layout_height="wrap_content" slideme:text="@string/terms_checking_purchase" style="@style/Widget.TextView.Slideme.Form.Value" />
            <TextView slideme:layout_width="match_parent" slideme:layout_height="wrap_content" slideme:text="@string/terms_and_conditions" style="@style/Widget.TextView.Slideme.Form.Title.Accent" />
            <com.slideme.sam.manager.view.touchme.ExpandableTextContainer slideme:textAppearance="?unknown_attr_ref: 1010042" slideme:textColor="?unknown_attr_ref: 1010036" slideme:id="@id/dev_terms" slideme:background="@drawable/bg_clickable_borderless" slideme:paddingTop="4dp" slideme:paddingBottom="4dp" slideme:layout_width="match_parent" slideme:layout_height="wrap_content" slideme:text="@string/loading" slideme:collapsedCharCount="@integer/collapsedDescriptionCharacters" style="@style/Widget.TextView.Slideme.Form.Value" />
            <TextView slideme:layout_width="match_parent" slideme:layout_height="wrap_content" slideme:text="@string/privacy_policy" style="@style/Widget.TextView.Slideme.Form.Title.Accent" />
            <com.slideme.sam.manager.view.touchme.ExpandableTextContainer slideme:textAppearance="?unknown_attr_ref: 1010042" slideme:textColor="?unknown_attr_ref: 1010036" slideme:id="@id/privacyPolicyText" slideme:background="@drawable/bg_clickable_borderless" slideme:paddingTop="4dp" slideme:paddingBottom="4dp" slideme:layout_width="match_parent" slideme:layout_height="wrap_content" slideme:text="@string/loading" slideme:collapsedCharCount="@integer/collapsedDescriptionCharacters" style="@style/Widget.TextView.Slideme.Form.Value" />
            <TextView slideme:textColor="@color/red" slideme:id="@id/incompatibleTitle" slideme:visibility="gone" slideme:layout_width="match_parent" slideme:layout_height="wrap_content" slideme:text="@string/incompatible" style="@style/Widget.TextView.Slideme.Form.Title.Accent" />
            <TextView slideme:id="@id/incompatibleText" slideme:paddingTop="4dp" slideme:paddingBottom="4dp" slideme:visibility="gone" slideme:layout_width="match_parent" slideme:layout_height="wrap_content" slideme:text="@string/compatibility_fail" style="@style/Widget.TextView.Slideme.Form.Value" />
            <TextView slideme:id="@id/incompatibleReason" slideme:paddingTop="12dp" slideme:paddingBottom="4dp" slideme:visibility="gone" slideme:layout_width="match_parent" slideme:layout_height="wrap_content" style="@style/Widget.TextView.Slideme.Form.Value" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
