<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <include android:id="@id/buttonPanel" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" layout="@layout/buttonbar" />
    <ScrollView android:paddingLeft="8dp" android:paddingTop="16dp" android:paddingRight="8dp" android:paddingBottom="16dp" android:layout_width="UNKNOWN_DATA_0x7f060043" android:layout_height="match_parent" android:layout_above="@id/buttonPanel" android:layout_alignParentTop="true" android:layout_centerHorizontal="true">
        <LinearLayout android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:paddingLeft="0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/sort" style="@style/Widget.TextView.Slideme.Form.Title.Accent" />
            <Spinner android:entries="@array/filter_sort_names" android:id="@id/sort" android:layout_height="wrap_content" style="@style/Widget.AppFilterControl" />
            <TextView android:paddingLeft="0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/filter" style="@style/Widget.TextView.Slideme.Form.Title.Accent" />
            <TextView android:textSize="@dimen/textSizeSmall" android:id="@id/price_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/filter_prices_title" style="@style/Widget.TextView.Slideme.Form.Title" />
            <Spinner android:entries="@array/filter_prices" android:id="@id/price" android:layout_height="wrap_content" style="@style/Widget.AppFilterControl" />
            <TextView android:textSize="@dimen/textSizeSmall" android:id="@id/screens_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/filter_screens_title" style="@style/Widget.TextView.Slideme.Form.Title" />
            <Spinner android:entries="@array/filter_screens" android:id="@id/screen_size" android:layout_height="wrap_content" style="@style/Widget.AppFilterControl" />
            <TextView android:textSize="@dimen/textSizeSmall" android:id="@id/parental_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/filter_parental_title" style="@style/Widget.TextView.Slideme.Form.Title" />
            <Spinner android:entries="@array/filter_parental" android:id="@id/parental_rating" android:layout_height="wrap_content" style="@style/Widget.AppFilterControl" />
            <TextView android:textSize="@dimen/textSizeSmall" android:id="@id/play_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/filter_play_title" style="@style/Widget.TextView.Slideme.Form.Title" />
            <Spinner android:entries="@array/filter_play" android:id="@id/google_play" android:layout_height="wrap_content" style="@style/Widget.AppFilterControl" />
            <TextView android:textSize="@dimen/textSizeSmall" android:id="@id/vibrate_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/filter_vibrate_title" style="@style/Widget.TextView.Slideme.Form.Title" />
            <Spinner android:entries="@array/filter_vibrate" android:id="@id/vibrate" android:layout_height="wrap_content" style="@style/Widget.AppFilterControl" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
