<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="wrap_content" android:fillViewport="true" android:isScrollContainer="true">
    <LinearLayout android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:paddingBottom="16dp" android:layout_width="UNKNOWN_DATA_0x7f060043" android:layout_height="UNKNOWN_DATA_0x1">
        <ImageView android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f060044" android:src="@drawable/ic_logo" android:scaleType="centerInside" />
        <EditText android:id="@id/user_edit" android:saveEnabled="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="-16dp" android:hint="@string/username" android:lines="1" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|numberPassword|phone|date" android:imeOptions="actionNone|actionSearch|actionSend|actionNext|actionDone|actionPrevious">
            <requestFocus />
        </EditText>
        <EditText android:id="@id/pass_edit" android:saveEnabled="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:hint="@string/password" android:lines="1" android:selectAllOnFocus="true" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" android:imeOptions="actionGo|actionSearch|actionDone|actionPrevious" />
        <Button android:textStyle="bold" android:textColor="?unknown_attr_ref: 1010036" android:id="@id/login" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/login" style="@style/Widget.Button.SlideMe.Green" />
        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp">
            <View android:id="@id/anchor" android:layout_width="UNKNOWN_DATA_0x801" android:layout_height="UNKNOWN_DATA_0x101" android:layout_centerInParent="true" />
            <Button android:id="@id/forgotPassword" android:paddingLeft="0dp" android:paddingRight="0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/forgot_password" android:layout_toLeftOf="@id/anchor" android:layout_alignParentLeft="true" style="@style/Widget.Button.SlideMe" />
            <Button android:id="@id/register" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/register" android:layout_toRightOf="@id/anchor" android:layout_alignParentRight="true" style="@style/Widget.Button.SlideMe" />
        </RelativeLayout>
        <com.facebook.widget.LoginButton fb:id="@id/facebook_register" fb:layout_width="match_parent" fb:layout_height="wrap_content" fb:layout_marginTop="8dp" fb:login_text="@string/facebook_login" fb:logout_text="" style="@style/Widget.Button.SlideMe" />
    </LinearLayout>
</ScrollView>
